# fvcontroller

./: .gitignore  design
firmware/: Makefile  alarm.c  alarm.h  buttons.c  buttons.h  command.c  command.h  config.h  default-modes.hex  eeprom-layout  fvcontroller.c  hardware.c  hardware.h  lcd.c  lcd.h  lcd_hw.h  owb.c  owb.h  registers.c  registers.h  serial.c  serial.h  set-default-modes.sh  set-station-name.sh  setup.c  setup.h  temp.c  temp.h  timer.c  timer.h  ui  version.c  version.h
hardware/: fvcontroller.py  layout.pcb  panel.pcb  parts.py
hardware/elements/: bridge-rectifier.fp  latchrelay.fp  pot.fp  screwconn3.fp  screwconn4.fp  screwconn5.fp  trans240-9-9.fp
hass-bridge/: README.md  config.toml  pyproject.toml
hass-bridge/hass_bridge/: hardware.py  main.py
server/: fvserial.py
server/fvlogging/: .flake8  manage.py  requirements.txt  snarf  uwsgi.conf
server/fvlogging/datalog/: admin.py  models.py  urls.py  views.py
server/fvlogging/datalog/management/commands/: makecontroller.py  updatelog.py
server/fvlogging/datalog/migrations/: 0001_initial.py  0002_auto_20190418_1408.py  0003_auto_20230223_1436.py
server/fvlogging/datalog/templates/datalog/: detail.html  detailgraph.html  summary.html
server/fvlogging/fvlogging/: settings.py  urls.py  views.py  wsgi.py
server/fvlogging/fvlogging/static/: style.css
server/fvlogging/fvlogging/templates/: base.html
