[tool.poetry]
name = "hass-bridge"
version = "0.1.0"
description = "Bridge fermenter controllers to Home Assistant"
authors = ["Stephen Early <steve@assorted.org.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paho-mqtt = "^2"
pyserial = "^3.5"
tomli = "^2.0"
# voluptuous = "^0.15"
sdnotify = "^0.3"

[tool.poetry.scripts]
fvbridge = "hass_bridge.main:fvbridge"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
